--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Personal Diary</string>
-    <string name="Starting_qoute">Who else but me is ever going to read these diary?</string>
+    <string name="Starting_qoute">Who else but me is ever going to read this diary?</string>
 </resources>
